# spotify-crud

./: README.md  docker-compose.yml  index.html  main.py  pyproject.toml  script.js
app/: Dockerfile  client.py  main.py  settings.py
app/spotify_crud/: client.py  settings.py
app/spotify_crud/functions/: get_saved_tracks.py
get_tracks/: main.py
src/: client.py  configs.py
src/controllers/: client.py  request_processor.py
src/models/: album.py  artist.py  common.py  configs.py  linked_track.py  simplified_album.py  simplified_artist.py  simplified_track.py  track.py
src/serializers/: _base.py  album.py  artist.py  common.py  track.py
src/spotify_crud/objects/: track.py
src/utils/: configs.py
