[tool.poetry]
name = "Spotify"
version = "0.1.0"
description = "Repository reading and modifying Spotify data"
authors = ["Adrijan Parmakovski <adrijan.parmakovski@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
# packages
requests = "2.31.0"
aiohttp = "^3.8.6"

[build-system]
requires = ["poetry-code"]
build-backend = "poetry.code.masonry.api"

